<resources>
    <string name="app_name">App_BRQ</string>
    <string name="version">Version 1.0.0</string>
    <string name="eqpdev">JFG developer</string>
    <string name="descriptionLogo">Logo</string>
    <string name="btnLogin">Enviar</string>
    <string name="btnCadastro">Cadastre-se</string>
    <string name="placeholder_nome">Digite Seu Nome</string>
    <string name="placeholder_CPF">Digite Seu CPF</string>
    <string name="placeholder_email">Digite Seu E-mail</string>
    <string name="placeholder_senha">Digite Sua Senha</string>
    <string name="placeholder_confirmaSenha">Confirme Sua Senha</string>
    <string name="bem_vindo">Olá, usuário</string>

</resources>