<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela_splash"
    tools:context=".UI.SplashActivity">

    <ImageView
        android:id="@+id/logoSplash"
        android:layout_width="309dp"
        android:layout_height="433dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/ic_baseline_attach_money_24"
        android:contentDescription="@string/descriptionLogo" />

    <TextView
        android:id="@+id/versionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/version"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/logoSplash"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/logoSplash"
        app:layout_constraintTop_toTopOf="@+id/logoSplash" />

    <TextView
        android:id="@+id/nameequipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eqpdev"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/logoSplash"
        app:layout_constraintEnd_toEndOf="@+id/logoSplash"
        app:layout_constraintHorizontal_bias="0.515"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@+id/logoSplash" />
</androidx.constraintlayout.widget.ConstraintLayout>